--- a/src/blocks/root/root.css
+++ b/src/blocks/root/root.css
@@ -2,4 +2,10 @@
     max-width: 1440px;
     min-width: 320px;
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    min-width: 100vh;
+    justify-content: space-between;
+    align-items: center;
 }
