--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,31 @@
 @import url(./vendor/normalize.css);
 @import url(./vendor/fonts.css);
-@import url(./blocks/root/root.css)
+@import url(./blocks/root/root.css);
+@import url(./blocks/page/__content/page__content.css);
+@import url(./blocks/main/main.css);
+@import url(./blocks/main/__list/main__list.css);
+@import url(./blocks/main/__title/main__title.css);
+@import url(./blocks/search/search.css);
+@import url(./blocks/search/__button/search__button.css);
+@import url(./blocks/search/__input-block/search__input-block.css);
+@import url(./blocks/search/__select/search__select.css);
+@import url(./blocks/search/__label/search__label.css);
+@import url(./blocks/search/__fieldset/search__fieldset.css);
+@import url(./blocks/card/__img/card__img.css);
+@import url(./blocks/card/__arg-title/card__arg-title.css);
+@import url(./blocks/card/__arg/card__arg.css);
+@import url(./blocks/card/__button/card__button.css);
+@import url(./blocks/card/__info-block/card__info-block.css);
+@import url(./blocks/card/__text/card__text.css);
+@import url(./blocks/card/__title-block/card__title-block.css);
+@import url(./blocks/card/__title/card__title.css);
+@import url(./blocks/card/card.css);
+@import url(./blocks/card/__img/_unvisible/card__imf_unvisible.css);
+@import url(./blocks/footer/footer.css);
+@import url(./blocks/footer/__adress-text/footer__adress-text.css);
+@import url(./blocks/footer/__adresses/footer__adresses.css);
+@import url(./blocks/footer/__contacts-text/footer__contacts-text.css);
+@import url(./blocks/footer/__contacts/footer__contacts.css);
+@import url(./blocks/search/__select/_no-selected/search__select_no-selected.css);
+@import url(./blocks/search/__option/search__option.css);
+@import url(./blocks/search/__option/_unvisible/search__option_unvisible.css);
