--- a/src/blocks/search/__select/_no-selected/search__select_no-selected.css
+++ b/src/blocks/search/__select/_no-selected/search__select_no-selected.css
@@ -1,5 +1,5 @@
 .search__select_no-selected{
-    color:  #ACB3B9;
+    color: var(--grey600, #ACB3B9);
     font-family: Roboto;
     font-size: 14px;
     font-style: normal;
