--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,6 +1,6 @@
 .footer{
     max-height: 140px;
-    width: 100%;
+    min-width: 100%;
     display: flex;
     padding: 40px 120px;
     justify-content: space-between;
@@ -8,4 +8,5 @@
     background:  #383838;
     box-sizing: border-box;
     margin: 88px 0 0;
+    align-self: center;
 }
