--- a/src/blocks/search/__option/search__option.css
+++ b/src/blocks/search/__option/search__option.css
@@ -4,10 +4,11 @@
     padding: 8px 12px;
     align-items: center;
     align-self: stretch;
-    color: #131313;
-    font-family: Roboto;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 140%; 
+    box-sizing: border-box;
+}
+
+.search__option:hover{
+    background:  #0D7AD9;
+    color: #FFF;
+    cursor: pointer;
 }
