--- a/src/blocks/search/__select/search__select.css
+++ b/src/blocks/search/__select/search__select.css
@@ -1,12 +1,17 @@
 .search__select{
-    border-radius: 4px;
-    border: 1px solid #CDD2D7;
-    background: #FFF;
     display: flex;
     height: 44px;
     padding: 4px 12px;
     align-items: center;
     gap: 8px;
-    height: 44px;
+    align-self: stretch;
+    border-radius: 4px;
+    border: 1px solid #CDD2D7;
+    background: #FFF;
+    justify-content: space-between;
     box-sizing: border-box;
+}
+
+.search__select:focus{
+   box-shadow: none;
 }
