--- a/src/blocks/root/root.css
+++ b/src/blocks/root/root.css
@@ -1,5 +1,5 @@
 .root{
-    max-width: 1440px;
+    width: 100%;
     min-width: 320px;
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
     margin: 0 auto;
