--- a/src/blocks/card/__arg/card__arg.css
+++ b/src/blocks/card/__arg/card__arg.css
@@ -1,5 +1,5 @@
-.card__arg{
-    color: var(--black, #131313);
+.card__arg {
+    color: #131313;
     font-family: Roboto;
     font-size: 16px;
     font-style: normal;
