--- a/src/blocks/card/__info-block/card__info-block.css
+++ b/src/blocks/card/__info-block/card__info-block.css
@@ -1,7 +1,15 @@
-.card__info-block{
+.card__info-block {
     margin: 0;
     padding: 0;
     display: flex;
     gap: calc(48/1200*100%);
     width: 100%;
+}
+
+@media screen and (max-width: 990px){
+    .card__info-block{
+        flex-direction: column;
+        margin-bottom: 16px;
+        gap: 8px;
+    }
 }
