--- a/src/blocks/card/__button-more/card__button-more.css
+++ b/src/blocks/card/__button-more/card__button-more.css
@@ -1,5 +1,5 @@
 .card__button-more{
-    color: var(--blue, #0D7AD9);
+    color:  #0D7AD9;
     font-family: Roboto;
     font-size: 16px;
     font-style: normal;
