--- a/src/blocks/card/__img/card__img.css
+++ b/src/blocks/card/__img/card__img.css
@@ -1,10 +1,26 @@
-.card__img{
+.card__img {
     display: flex;
     width: 150px;
-    height: auto;
+    height: 40px;
     overflow: hidden;
     justify-content: center;
     align-self: center;
     margin-left: 17px;
     align-self: center;
+    object-fit: contain;
+}
+
+@media screen and (max-width: 990px){
+    .card__img{
+        margin: 0 auto;
+        width: 248px;
+        order: -1;
+    }
+}
+
+@media screen and (max-width: 420px){
+    .card__img{
+        align-self: center;
+        width: 100%;
+    }
 }
