--- a/src/blocks/card/__paragragh/card__paragragh.css
+++ b/src/blocks/card/__paragragh/card__paragragh.css
@@ -5,7 +5,5 @@
     font-style: normal;
     font-weight: 400;
     line-height: 145%; 
-    margin: 0;
-    padding: 0;
-    list-style-type: circle;
+    box-sizing: border-box;
 }
