--- a/src/blocks/card/__text/card__text.css
+++ b/src/blocks/card/__text/card__text.css
@@ -1,11 +1,11 @@
-.card__text{
+.card__text {
     display: flex;
     flex-direction: column;
     max-height: 100px;
     overflow: hidden;
     width: 100%;
     position: relative;
-    margin: 0;
+    gap: 8px;
+    margin: 8px 0;
     padding: 0;
-    gap: 3px;
 }
