--- a/src/blocks/card/__title-block/card__title-block.css
+++ b/src/blocks/card/__title-block/card__title-block.css
@@ -1,7 +1,13 @@
-.card__title-block{
+.card__title-block {
     width: 100%;
     margin: 0;
     padding: 0;
     display: flex;
-    
+}
+
+@media screen and (max-width: 990px){
+    .card__title-block{
+        flex-direction: column;
+        align-items: flex-start;
+    }
 }
