--- a/src/blocks/footer/__contacts-text/footer__contacts-text.css
+++ b/src/blocks/footer/__contacts-text/footer__contacts-text.css
@@ -8,3 +8,9 @@
     margin: 0;
     padding: 0;
 }
+
+@media screen and (max-width: 990px){
+    .footer__contacts-text{
+        font-size: 16px;
+    }
+}
