--- a/src/blocks/footer/__contacts/footer__contacts.css
+++ b/src/blocks/footer/__contacts/footer__contacts.css
@@ -1,7 +1,14 @@
-.footer__contacts{
+.footer__contacts {
     display: flex;
     flex-direction: column;
     margin: 0;
     padding: 0;
     gap: 8px;
+}
+
+@media screen and (max-width: 990px){
+    .footer__contacts{
+        width: 100%;
+        align-items: flex-start;
+    }
 }
