--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,4 +1,4 @@
-.footer{
+.footer {
     max-height: 140px;
     min-width: 100%;
     display: flex;
@@ -9,4 +9,16 @@
     box-sizing: border-box;
     margin: 88px 0 0;
     align-self: center;
+}
+
+@media screen and (max-width: 990px){
+    .footer{
+        margin: 32px 0 0;
+        width: 100%;
+        flex-direction: column;
+        padding: 32px 16px;
+        align-items: center;
+        min-height: 191px;
+        gap: 24px;
+    }
 }
