--- a/src/blocks/main/__list/main__list.css
+++ b/src/blocks/main/__list/main__list.css
@@ -1,8 +1,17 @@
-.main__list{
+.main__list {
     margin: 48px auto 0;
     display: flex;
     flex-direction: column;
     gap: 32px;
     list-style-type: none;
     padding: 0;
+}
+
+@media screen and (max-width: 990px){
+    .main__list{
+        margin: 32px auto 0;
+        gap: 20px;
+        width: 100%;
+        box-sizing: border-box;
+    }
 }
