--- a/src/blocks/main/__title/main__title.css
+++ b/src/blocks/main/__title/main__title.css
@@ -1,4 +1,4 @@
-.main__title{
+.main__title {
     color: #131313;
     font-family: Roboto;
     font-size: 48px;
@@ -7,4 +7,13 @@
     line-height: 58px;
     margin: 0 0 40px;
     padding: 0;
+}
+
+@media screen and (max-width: 990px){
+    .main__title{
+        font-size: 34px;
+        line-height: 120%;
+        letter-spacing: -0.34px;
+        margin-bottom: 24px;
+    }
 }
