--- a/src/blocks/main/main.css
+++ b/src/blocks/main/main.css
@@ -1,6 +1,15 @@
-.main{
-    margin:  0 auto;
+.main {
+    margin: 0 auto;
     width: calc(1200/1440*100%);
     box-sizing: border-box;
     max-width: 1200px;
+}
+
+@media screen and (max-width: 990px){
+    .main{
+        width: calc(288/320*100%);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
