--- a/src/blocks/page/__content/page__content.css
+++ b/src/blocks/page/__content/page__content.css
@@ -1,4 +1,4 @@
-.page__content{
+.page__content {
     margin: 0 auto;
     width: 100%;
     padding: 64px 0 0;
@@ -7,5 +7,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    
+}
+
+@media screen and (max-width: 990px){
+    .page__content{
+        padding: 32px 0 0;
+    }
 }
