--- a/src/blocks/search/__button-clear/search__button-clear.css
+++ b/src/blocks/search/__button-clear/search__button-clear.css
@@ -1,7 +1,7 @@
 .search__button-clear{
     position: absolute;
     display: none;
-    color: var(--blue, #0D7AD9);
+    color: #0D7AD9;
     font-family: Roboto;
     font-size: 16px;
     font-style: normal;
@@ -12,4 +12,13 @@
     background: none;
     flex-direction: row;
     gap: 4px
+}
+
+@media screen and (max-width: 990px){
+    .search__button-clear{
+        position: relative;
+        font-size: 14px;
+        line-height: 140%;
+        top: 0;
+    }  
 }
