--- a/src/blocks/search/__fieldset/search__fieldset.css
+++ b/src/blocks/search/__fieldset/search__fieldset.css
@@ -1,8 +1,16 @@
-.search__fieldset{
+.search__fieldset {
     margin: 0;
     padding: 0;
     display: flex;
     gap: 16px;
     border: none;
     width: calc(547/692*100%)
+}
+
+@media screen and (max-width: 990px){
+    .search__fieldset{
+        flex-direction: column;
+        gap: 16px;
+        width: 100%;
+    }
 }
