--- a/src/blocks/search/__options/search__options.css
+++ b/src/blocks/search/__options/search__options.css
@@ -1,4 +1,4 @@
-.search__options{
+.search__options {
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -10,3 +10,9 @@
     z-index: 2;
 }
 
+
+@media screen and (max-width: 420px){
+    .search__options{
+        top: 70px;
+    }
+}
