--- a/src/blocks/search/search.css
+++ b/src/blocks/search/search.css
@@ -1,7 +1,15 @@
-.search{
+.search {
     width: 100%;
     display: flex;
     flex-direction: row;
     gap: 32px;
-    width: calc(692/1200*100%)
+    width: calc(692/1200*100%);
+}
+
+@media screen and (max-width: 990px){
+    .search{
+        width: 100%;
+        flex-direction: column;
+        gap: 24px;
+    }
 }
